<resources>
    <string name="app_name">ACTIVIDAD1PROG</string>
    <string name="etiqueta_rutinagym">¡AUMENTA TU MASA MUSCULAR!</string>
    <string name="etiqueta_pierna">RUTINA PARA PIERNAS FUERTES</string>
    <string name="etiqueta_brazo">RUTINA PARA BRAZOS FUERTES</string>
    <string name="etiqueta_pecho">RUTINA PARA PECHO FUERTE</string>
    <!--TEXTOS DE MENU INTERMEDIO -->
    <string name="saludo">¿Cómo puedo ayudarte?</string>
    <string name="btnVolver">VOLVER</string>
    <string name="verMas">VER MÁS</string>
    <string name="textoDietas">Recuerda que para buenos resultados una buena alimentación es lo principal. </string>
    <string name="textoEjercicios">Si lo que necesitas es aumentar tu masa muscular, una buena opción es levantar pesas.  </string>
    <string name="textoCalculadora">¿Sabes cuanto tiempo debes entrenar? No te preocupes, nosotros te ayudamos indicando tu tiempo ideal.</string>
    <string name="bienvenidaApp">Bienvenido a tu app saludable</string>
    <string name="txtAlimentate">ALIMENTATE SANO</string>
    <string name="txtRutina">ELIGE TU RUTINA</string>
    <string name="txtCasa">ENTRENA EN CASA</string>
    <string name="txtMotiva">Prepara la mejor versión de ti, sin excusas, gratis, a tu ritmo.</string>
    <string name="mensajeCalculadora">CALCULADORA DE TIEMPO</string>


</resources>