<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingVertical="32dp"
    android:paddingHorizontal="16dp"
    tools:context=".menuIntermedio">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSaludo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/saludo"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewPregunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saludo"
                android:textSize="30sp"
                android:textColor="@color/textos"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>



    <FrameLayout
        android:id="@+id/cvDieta"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/cvSaludo"
        android:layout_marginTop="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/dieta"
            android:scaleType="centerCrop"
            android:alpha="0.5"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/cardview_shadow_end_color"
            android:layout_marginTop="15dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/textViewDieta"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/textoDietas"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <Button
        android:id="@+id/btnDietas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verMas"
        android:textColor="@color/btnMas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvDieta"
        app:layout_constraintHorizontal_bias="0.5"
        android:backgroundTint="@color/saludo"/>

    <FrameLayout
        android:id="@+id/cvEjercicios"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/btnDietas"
        android:layout_marginTop="15dp">
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ejercicio"
            android:scaleType="centerCrop"
            android:alpha="0.5"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/cardview_shadow_end_color"
            android:layout_marginTop="15dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/textViewEjercicios"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/textoEjercicios"
                    android:textSize="23sp"
                    android:textColor="@color/textos"
                    android:layout_marginStart="10dp"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <Button
        android:id="@+id/btnEjercicios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verMas"
        android:textColor="@color/btnMas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvEjercicios"
        app:layout_constraintHorizontal_bias="0.5"
        android:backgroundTint="@color/saludo"
        />

    <FrameLayout
        android:id="@+id/cvEjerciciosRapidos"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/btnEjercicios"
        android:layout_marginTop="15dp">
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ejercicioshit"
            android:scaleType="centerCrop"
            android:alpha="0.5"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/cardview_shadow_end_color"
            android:layout_marginTop="15dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/textViewEjerciciosRapidos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/textoEjerciciosRapidos"
                    android:textSize="25sp"
                    android:textColor="@color/textos"
                    android:layout_marginStart="10dp"

                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <Button
        android:id="@+id/btnEjerciciosRapidos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verMas"
        android:textColor="@color/btnMas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvEjerciciosRapidos"
        app:layout_constraintHorizontal_bias="0.5"
        android:backgroundTint="@color/saludo"/>


    <Button
        android:id="@+id/btnVolver"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btnVolver"
        android:textColor="@color/btnMas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEjerciciosRapidos"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/saludo"
        />





</androidx.constraintlayout.widget.ConstraintLayout>